--- a/css/style2.css
+++ b/css/style2.css
@@ -11,3 +11,10 @@ div {
 #target {
   border: 1px solid black;
 }
+
+code {
+    background-color: #eee;
+    border-radius: 3px;
+    font-family: courier, monospace;
+    padding: 0 3px;
+}
