--- a/css/style2.css
+++ b/css/style2.css
@@ -1,20 +1,56 @@
 div {
-  margin: 0em;
-  padding: 2em;
+  padding: 10px;
+  display:inline-block;
 }
 
-#source {
-  color: blue;
+.target {
   border: 1px solid black;
 }
 
-#target {
+span {
   border: 1px solid black;
 }
 
-code {
-    background-color: #eee;
-    border-radius: 3px;
-    font-family: courier, monospace;
-    padding: 0 3px;
+.source {
+  border: 1px solid black;
+}
+
+img {
+  height: 75px;
+  width: 75px;
+
+}
+
+#target1 {
+
+  height: 85px;
+  width: 85px;
+}
+
+#target2 {
+
+  height: 85px;
+  width: 85px;
+}
+
+#target3 {
+
+  height: 85px;
+  width: 85px;
+}
+
+#target4 {
+  height: 85px;
+  width: 85px;
+}
+
+#target5 {
+
+  height: 85px;
+  width: 85px;
+}
+
+#target6 {
+  height: 85px;
+  width: 85px;
 }
